# modelwerk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: 01_perceptron.md  02_mlp.md  03_lenet.md  04_transformer.md  05_ctm.md  05_mamba.md  06_ctm.md  06_mamba.md
lessons/: 01_perceptron.py  02_mlp.py  03_lenet5.py  04_transformer.py  05_ctm.py  05_mamba.py  06_ctm.py  06_mamba.py
src/modelwerk/: __init__.py
src/modelwerk/building_blocks/: __init__.py  attention.py  conv.py  dense.py  embedding.py  grad.py  network.py  neuron.py  optimizers.py  pool.py
src/modelwerk/data/: generators.py  mnist.py  text.py  utils.py
src/modelwerk/data/samples/: digit_2.json  digit_3.json  digit_7.json
src/modelwerk/models/: __init__.py  ctm.py  lenet5.py  mamba.py  mlp.py  perceptron.py  transformer.py
src/modelwerk/primitives/: __init__.py  activations.py  losses.py  matrix.py  progress.py  random.py  scalar.py  vector.py
src/modelwerk/viz/: __init__.py  attention_maps.py  boundaries.py  plots.py  weights.py
tests/: test_building_blocks.py  test_data.py  test_models.py  test_primitives.py
